Fix misaligned flexboxes with missing attributes

--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ body {
 
 #reqs {
     flex: 1;
-    flex-grow: 7;
+    flex-grow: 8;
     border: none;
     margin: 4px;
     min-width: 10%;
@@ -72,8 +72,9 @@ body {
 
 #links {
     flex: 1;
-    flex-shrink: 0;
+    flex-grow: 1;
     margin: 4px;
+    border: none;
     background-color: rgba(0, 0, 0, 0.3);
 }
 
@@ -87,6 +88,7 @@ body {
 
 #plan {
     flex: 1;
+    flex-grow: 8;
     display: flex;
     flex-flow: column wrap;
     border: none;
@@ -103,7 +105,7 @@ body {
 
 #course-finder {
     flex: 1;
-    flex-grow: 0;
+    flex-grow: 1;
     border: none;
     margin: 4px;
     background-color: rgba(0, 0, 0, 0.3);
